fix styles for  table wrapping

--- a/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
@@ -428,4 +428,8 @@
     opacity: 0.6;
   }
 
+  .v-table-noWrap .v-table-body-wrapper,
+  .v-table-noWrap .v-table-body {
+    overflow: auto !important;
+  }
 }
